--- a/src/main/resources/templates/Layouts/navbar.html
+++ b/src/main/resources/templates/Layouts/navbar.html
@@ -17,6 +17,10 @@
     <a th:href="@{/api/{username}/dashboard(username=${username})}" class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center">
       <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
     </a>
+    <a th:href="@{/api/{username}/statistics/1(username=${username})}" class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center">
+      <img src="/statistics.png" alt="Statistics Icon" class="rounded-circle" width="30" height="30">
+      Statistics
+    </a>
     <a th:href="@{/logout}" class="btn btn-outline-primary my-2 ml-2 my-sm-0 d-flex align-items-center">
       <img src="/logout.png" alt="Logout" width="30" height="30">
     </a>
