--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -52,7 +52,7 @@
                             <div th:if="${stat.index >= pageStat.index * 3 and stat.index < (pageStat.index + 1) * 3}">
                                 <h4 th:text="${stat.index + 1} + '. ' + ${question.question}"></h4>
                                 <div class="form-check" th:each="option : ${question.options}">
-                                    <input class="form-check-input" type="radio" th:name="${stat.index + 1}" th:value="${option.optionText}" th:id="'q' + ${stat.index + 1} + 'a' + ${option.id}">
+                                    <input class="form-check-input" type="radio" th:name="${question.id}" th:value="${option.optionText}" th:id="'q' + ${stat.index + 1} + 'a' + ${option.id}">
                                     <label class="form-check-label" th:for="'q' + ${stat.index + 1} + 'a' + ${option.id}" th:text="${option.optionText}"></label>
                                 </div>
                             </div>
