--- a/src/main/resources/templates/quizzes.html
+++ b/src/main/resources/templates/quizzes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Select Quiz</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body style="background-color: #B0C4DE" layout:fragment="content">
 <div class="container mt-5">
@@ -16,12 +17,21 @@
                class="list-group-item list-group-item-action"></a>
         </div>
         <br>
-        <h3>Beginner-level quizzes <span class="badge badge-secondary">Not completed</span></h3>
+        <h3>Beginner-level quizzes
+            <span class="badge badge-secondary">
+                <span th:text="${allQuizzesCompleted ? 'Completed' : 'Not completed'}"></span>
+            </span>
+        </h3>
         <br>
-        <div th:each="quiz : ${quizzes}">
+        <div th:each="quiz : ${quizzes}" class="list-group-item">
             <a th:href="@{/api/{username}/quizzes/quiz/{quizId}(username=${username}, quizId=${quiz.id})}"
-               th:text="'Quiz ' + ${quiz.id}"
-            class="list-group-item list-group-item-action"></a>
+               class="d-flex list-group-item-action text-decoration-none">
+                <span th:text="'Quiz ' + ${quiz.id}"></span>
+
+                <span th:if="${quizCompletionStatus[quiz.id] != null}" th:class="${quizCompletionStatus[quiz.id] ? 'text-success ml-2' : 'text-danger ml-2'}">
+                    <i th:class="${quizCompletionStatus[quiz.id] ? 'bi bi-check-circle' : 'bi bi-x-circle'}"></i>
+                </span>
+            </a>
         </div>
         <br>
         <h3>To unlock quizzes from other levels, please complete previous</h3>
